--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-URI = "mongodb+srv://rohit:rohitAuthPractice1@cluster0.5gxr6.mongodb.net/practiceAuth?retryWrites=true&w=majority&appName=Cluster0"
+URI = mongodb+srv://rohit:rohitAuthPractice1@cluster0.5gxr6.mongodb.net/practiceAuth?retryWrites=true&w=majority&appName=Cluster0
